--- a/Algorithm/Algorithm/Algorithm.csproj
+++ b/Algorithm/Algorithm/Algorithm.csproj
@@ -9,7 +9,7 @@
         <AppDesignerFolder>Properties</AppDesignerFolder>
         <RootNamespace>Algorithm</RootNamespace>
         <AssemblyName>Algorithm</AssemblyName>
-        <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+        <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -45,6 +45,7 @@
         <Compile Include="_2QuadTree\AABB.cs" />
         <Compile Include="_2QuadTree\QuadTree.cs" />
         <Compile Include="_2QuadTree\QuadTreeNode.cs" />
+        <Compile Include="_3PrimeNumber.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
