--- a/Algorithm/Algorithm/Algorithm.csproj
+++ b/Algorithm/Algorithm/Algorithm.csproj
@@ -47,6 +47,7 @@
         <Compile Include="_2QuadTree\QuadTreeNode.cs" />
         <Compile Include="_3PrimeNumber.cs" />
         <Compile Include="_4StringSearch.cs" />
+        <Compile Include="_5ReverseLinkedList.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
